# ToDo-List

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Commands.cpp  Commands.hpp  Makefile  README.md  Task.cpp  Task.hpp  cmake_install.cmake  ctodo  main.cpp  todoc
Tasks/: a.txt
doc/: config.cfg  helpCommand.txt
include/: CMakeLists.txt  Makefile  cmake_install.cmake
include/libconfig/: Makefile  config.status  libtool
include/libconfig/doc/: Makefile
include/libconfig/examples/: Makefile
include/libconfig/examples/c/: Makefile  example1  example2  example3  example4
include/libconfig/examples/c++/: Makefile  example1  example2  example3  example4
include/libconfig/lib/: Makefile
include/libconfig/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig___la-strvec.Plo  libconfig___la-util.Plo  libconfig___la-wincompat.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo  libconfig_la-strvec.Plo  libconfig_la-util.Plo  libconfig_la-wincompat.Plo
include/libconfig/tests/: Makefile  libconfig_tests
include/libconfig/tinytest/: Makefile
lib/: CMakeLists.txt  Commands.cpp  Commands.hpp  Environment.cpp  Environment.hpp  Makefile  Task.cpp  Task.hpp  UserSettings.hpp  cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt  Commands.cpp  Environment.cpp  Makefile  Task.cpp  cmake_install.cmake  main.cpp
(+21 files in other folders)
